neue maschinen, Komma-Zahlen

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -587,6 +587,7 @@
                 <a href="/products/new">Neues Produkt</a>
                 <a href="/materials">Materialien</a>
                 <a href="/machines">Maschinen</a>
+                <a href="/tools/converted-files">🎨 SVG-Bibliothek</a>
                 <a href="/ideas" style="opacity: 0.8;">💡 Ideen</a>
                 <a href="/feedback/list" style="opacity: 0.8;">📝 Feedback</a>
             </nav>
