--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -85,6 +85,7 @@
             <a href="/products" class="btn btn-secondary">Produktliste</a>
             <a href="/materials" class="btn btn-secondary">Materialien</a>
             <a href="/machines" class="btn btn-secondary">Maschinen</a>
+            <a href="/tools/converted-files" class="btn btn-secondary">🎨 SVG-Bibliothek</a>
         </div>
     </div>
     
