--- a/app/templates/products/form_laser_engraving.html
+++ b/app/templates/products/form_laser_engraving.html
@@ -246,7 +246,7 @@
                     <label for="labor_minutes">Arbeitszeit (Minuten)</label>
                     <input type="text" id="labor_minutes" name="labor_minutes" 
                            pattern="[0-9]*[.,]?[0-9]*" inputmode="decimal"
-                           value="{% if product %}{{ (product.labor_hours * 60) }}{% else %}0{% endif %}">
+                           value="{% if product %}{{ product.labor_minutes }}{% else %}0{% endif %}">
                     <small style="color: var(--color-text-light);">Produktionszeit in Minuten</small>
                 </div>
                 
